# company_insights

./: .gitignore  LICENSE  README.md  env_example.env  main.py  pyproject.toml  requirements.txt  summarizer.py
company_insights/: analogous_trades.py  analogous_trades_2.py  fetch_news.py  summarizer.py
company_insights/utils/: file_manager.py  news_api.py  tavily_api.py
utils/: file_manager.py  firecrawl_scraper.py  news_api.py  tavily_api.py
