[project]
name = "company_insights"
version = "0.1.0"
description = ""
authors = [
    {name = "Ben Randoing",email = "benrandoing20@gmail.com"}
]

license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9, <4.0"
dependencies = [
    "aiohappyeyeballs (==2.4.4)",
    "aiohttp (==3.11.11)",
    "aiosignal (==1.3.2)",
    "annotated-types (==0.7.0)",
    "anyio (==4.8.0)",
    "appdirs (==1.4.4)",
    "async-timeout (==4.0.3)",
    "attrs (==25.1.0)",
    "beautifulsoup4 (==4.13.3)",
    "bs4 (==0.0.2)",
    "certifi (==2025.1.31)",
    "charset-normalizer (==3.4.1)",
    "cssselect (==1.2.0)",
    "exceptiongroup (==1.2.2)",
    "fake-useragent (==2.0.3)",
    "feedparser (==6.0.11)",
    "firecrawl (==1.11.0)",
    "frozenlist (==1.5.0)",
    "greenlet (==3.1.1)",
    "h11 (==0.14.0)",
    "httpcore (==1.0.7)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "importlib-metadata (==8.6.1)",
    "importlib-resources (==6.5.2)",
    "jsonpatch (==1.33)",
    "jsonpointer (==3.0.0)",
    "langchain (==0.3.18)",
    "langchain-core (==0.3.34)",
    "langchain-text-splitters (==0.3.6)",
    "langsmith (==0.3.5)",
    "lxml (==4.9.4)",
    "multidict (==6.1.0)",
    "nest-asyncio (==1.6.0)",
    "numpy (==1.26.4)",
    "ollama (==0.4.7)",
    "orjson (==3.10.15)",
    "packaging (==24.2)",
    "pandas (==2.2.3)",
    "parse (==1.20.2)",
    "propcache (==0.2.1)",
    "pydantic (==2.10.6)",
    "pydantic-core (==2.27.2)",
    "pyee (==11.1.1)",
    "pyppeteer (==2.0.0)",
    "pyquery (==2.0.1)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.0.1)",
    "pytz (==2025.1)",
    "pyyaml (==6.0.2)",
    "regex (==2024.11.6)",
    "requests (==2.32.3)",
    "requests-futures (==1.0.2)",
    "requests-html (==0.10.0)",
    "requests-toolbelt (==1.0.0)",
    "ruff (==0.9.4)",
    "sgmllib3k (==1.0.0)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "soupsieve (==2.6)",
    "sqlalchemy (==2.0.37)",
    "tavily-python (==0.5.0)",
    "tenacity (==9.0.0)",
    "tiktoken (==0.8.0)",
    "tqdm (==4.67.1)",
    "typing-extensions (==4.12.2)",
    "tzdata (==2025.1)",
    "urllib3 (==1.26.20)",
    "w3lib (==2.3.1)",
    "websockets (==10.4)",
    "yahoo-fin (==0.8.9.1)",
    "yahooquery (==2.3.7)",
    "yarl (==1.18.3)",
    "zipp (==3.21.0)",
    "zstandard (==0.23.0)",
    "langchain-community (>=0.3.17,<0.4.0)",
    "langchain-ollama (>=0.2.3,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
